@@ -105,7 +105,7 @@ dependencies {
     implementation fg.deobf("curse.maven:jade-324717:4986594")
     implementation fg.deobf("maven.modrinth:quark:${minecraft_version}-4.0-439")
     implementation fg.deobf("maven.modrinth:zeta:${minecraft_version}-1.0-14")
-    implementation fg.deobf("curse.maven:lodestone-616457:${lodestone_version}")
+    implementation fg.deobf("team.lodestar.lodestone:lodestone:${minecraft_version}-${lodestone_version}")
 
     //Client Only
     runtimeOnly fg.deobf("maven.modrinth:legendary-tooltips:1.4.5")
