@@ -9,4 +9,4 @@ minecraft_version=1.20.1
 forge_version=47.2.16
 jei_version=15.2.0.27
 curios_version=5.7.2
-lodestone_version=5460471
+lodestone_version=1.6.2.1
