@@ -33,4 +33,4 @@ versionRange = "[5.2.0-beta.3+1.20.1,)"
 [[dependencies.valoria]]
 modId = "lodestone"
 mandatory = true
-versionRange = "[1.20.1-1.6.1,)"
+versionRange = "[1.20.1-1.6.2.1,)"
