@@ -4,12 +4,14 @@
 
 - Added Custom Voxel shapes to some blocks
 - Added some Recipes
+- Added firefly like particles, spawned in Shadeforest
 - Reworked Stone Crusher (A bit)
 - Reworked Accessories
 - Reworked BlazeReap
 - Decreased amount of bones dropped from Goblins
 
 - ID change of "pick" -> "prospectors_pick"
+- Changed spawnables in Valoria dimension
 
 - Fixed Katana's, Scythe's
 - Fixed Scythe Attributes
